Adding lang entries for newer monuments

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -19,7 +19,9 @@
   "monument.mining_quarry_sulfur_display_name": "Sulfur Quarry",
   "monument.mining_quarry_stone_display_name": "Stone Quarry",
   "monument.mining_quarry_hqm_display_name": "HQM Quarry",
+  "monument.missile_silo_monument": "Missile Silo",
   "monument.satellite_dish_display_name": "Satellite Dish",
+  "monument.arctic_base_a": "Arctic Research Lab",
   "monument.dome_monument_name": "The Dome",
   "monument.supermarket": "Abandoned Supermarket",
   "monument.mining_outpost_display_name": "Mining Outpost",
